# Lab1-2022111697

./: 123.txt  CMakeLists.txt  DirectedGraph.cpp  main.cpp  random_walk.txt
test/: test_black.cpp  test_white.cpp
